contact form spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,120 +1,60 @@
-:root {
-    --primary-green: rgb(51, 204, 204);
-}
-
 body {
-    font-family: futura-pt, sans-serif;
-    font-style: normal;
-    font-size: 1rem;
-    font-weight: 400;
-    background-color: rgb(46, 46, 46);
-    color: #fff;
+    background-color: black;
 }
 
-
-/** Navbar
- ---------------------------------------------------------*/
- .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+/** Contact
+---------------------------------------------------------*/
+#contactus {
+    color: white;
 }
 
-.navbar-nav a,
-.navbar-text {
-    color: #fff;
-    letter-spacing: 1.2;
-    text-transform: uppercase;
-    font-weight: 500;
-}
+.contact-title {
+    font-family: futura-pt-condensed, sans-serif;
+    font-weight: 700;
+    padding: 1rem 0;
+  }
 
-.navbar-nav a:hover {
-    color: var(--primary-green);
-    transition: color 500ms;
-}
-
-.navbar-nav .active {
-    color: var(--primary-green);
-    position: relative;
-    padding-bottom: 2px;
-}
-
-
-
-
-.fa-twitter-square:hover,  
-.fa-facebook-square:hover, 
-.fa-linkedin:hover, 
-.fa-instagram:hover {
-    color: var(--primary-green);
-    cursor: pointer;
-}
-
-
-/** Background Video
- ---------------------------------------------------------*/
-
-
-video#bgvid {
-    display: none;
-}
-
-.mobile-images {
-    position: relative;
-}
-
-.header-image {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    height: auto;
-    -ms-transform: translateX(-50%) translateY(-50%);
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-}
-
-
-#heroVideo {
-    background-color: rgb(46, 46, 46);
-}
-
-
-
-
-
-/** Media Queries
- ---------------------------------------------------------*/
-@media (min-width: 992px){
+  .contact-info {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+  }
+  
+  .social {
+    font-weight: 700;
+  }
+  
+  .social-contact ul {
+    list-style: none;
+    display: flex;
     
-    .navbar-nav .active:before {
-        content: "";
-        position: absolute;
-        width: 50%;
-        height: 1px;
-        bottom: 0;
-        left: 25%;
-        border-bottom: 2px solid var(--primary-green);
-        
-    }
-
-    #heroVideo {
-        background-image: none;
-        background-color: transparent;
-    }
-
-    .header-image {
-        display: none;
-    }
-
-    video#bgvid {
-        position: fixed;
-        display: block;
-        top: 0%;
-        left: 0%;
-        min-width: 100%;
-        min-height: 100%;
-        width: auto;
-        height: auto;
-        z-index: -100;
-    }
-}
+  }
+  
+  .social-contact ul li {
+    /* padding: 0 1rem; */
+  }
+  
+  .btn-sub {
+    letter-spacing: 1.5;
+    color: black;
+    background-color: #fff;
+    font-weight: 700;
+    border-radius: 0.15rem;
+  }
+  
+  .btn-form {
+    width: 100%;
+    letter-spacing: 1.5;
+    color: black;
+    background-color: #fff;
+    font-weight: 700;
+    border-radius: 0.15rem;
+  }
+  
+  .form-control {
+    background-color: rgb(46, 46, 46);
+    border: 1px solid white;
+    border-radius: 0.2rem;
+  }
